# vaccine-dashboard-api

./: .env  Cargo.toml  README.md
migrations/2020-10-26-162809_create_users/: up.sql
migrations/2021-01-17-184336_create_districts/: down.sql  up.sql
src/: auth.rs  db.rs  error_handler.rs  main.rs  schema.rs
src/districts/: model.rs  routes.rs
src/health/: routes.rs
src/src/: schema.rs
src/users/: model.rs  routes.rs
