[package]
name = "vaccine-dashboard-api"
version = "0.1.0"
authors = ["Jacob Trueb <trueb2@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.3.2"
actix-web-httpauth = "0.5.0"
actix-service = "1.0.6"
actix-rt = "1.1.1"
base64 = "0.13.0"
bcrypt = "0.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "uuid", "chrono", "network-address"] }
diesel_migrations = "1.4.0"
env_logger = "0.8.2"
futures = { version = "0.3.8", features = ["compat"] }
futures-util = "0.3.8"
http = "0.2"
ipnetwork="0.17.0"
lazy_static = "1.4.0"
listenfd = "0.3.3"
log = "0.4.11"
serde = "1.0.118"
serde_json = "1.0.60"
r2d2 = "0.8.9"
rand = "0.8.2"
rust-crypto = "0.2"
uuid = { version = "0.8.1", features = ["serde", "v4"] }